hydroflow/tests/compile-fail/surface_source_interval_badarg.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/surface_source_interval_badarg.rs:7:25
  |
7 |         source_interval(5) -> for_each(std::mem::drop);
  |         ----------------^-
  |         |               |
  |         |               expected `Duration`, found integer
  |         arguments to this function are incorrect
  |
note: function defined here
 --> $CARGO/tokio-1.40.0/src/time/interval.rs
  |
  | pub fn interval(period: Duration) -> Interval {
  |        ^^^^^^^^
